@@ -48,3 +48,4 @@ Original provenience: SNU-RT Benchmark Suite for Worst Case Timing Analysis
 
 2016-04-05:
 - Return '0' on success
+- Changed return type of select_return from float to int
